[package]
edition = "2021"
name = "simple-slash"
version = "0.1.0"

[dependencies]
# tokio = { version = "1.0.0", default-features = false, features = ["io-util", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.16.1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = "2.0.0"
futures-channel = "0.3"
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time", "sync"] }

[dependencies.tungstenite]
version = "0.16.0"
default-features = false